[gd_scene load_steps=4 format=3 uid="uid://cnmib5nlodsej"]

[ext_resource type="Script" uid="uid://de57w3ixfridu" path="res://inimigo_5.gd" id="1_6ib0q"]
[ext_resource type="Texture2D" uid="uid://b8vao7gpc4qs4" path="res://Assets/tiny_ship20.png" id="2_72ik8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8cry4"]
size = Vector2(72, 92)

[node name="inimigo5" type="Node2D"]
script = ExtResource("1_6ib0q")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_72ik8")

[node name="Hitbox" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_8cry4")

[node name="cooldown_timer" type="Timer" parent="."]

[node name="spawn_bala_1" type="Marker2D" parent="."]
position = Vector2(38, 15)

[node name="spawn_bala_2" type="Marker2D" parent="."]
position = Vector2(38, -14)

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="cooldown_timer" to="." method="_on_cooldown_timer_timeout"]
